# cross-platform-rust

basic/android/Greetings/: build.gradle  cargo
basic/android/Greetings/app/: build.gradle
basic/android/Greetings/gradle/wrapper/: gradle-wrapper.properties
basic/cargo/: Cargo.toml
