[package]
name = "greetings"
version = "0.1.1"
authors = ["fluffyemily <fluffyemily@mozilla.com>"]
description = "Example static library project built for iOS"
publish = false

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }
error-chain = { version = "0.12", default-features = false }
log = "0.4"
android_logger = "0.5"

[dev-dependencies]
built = "*"
lazy_static = "1"

[features]
invocation = []
backtrace = ["error-chain/backtrace"]
default = ["backtrace"]

[build-dependencies]
cc = "1.0"

[lib]
name = "greetings"
crate-type = ["staticlib", "cdylib"]
